--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="colorPrimaryDark">#FF6347</color>
     <color name="colorAccent">#FF6347</color>
 
-    <color name="list_divider">#8c8c8c</color>
-    <color name="list_row_start_color">#ffffff</color>
-    <color name="row_list_end_color">#ffffff</color>
+    <color name="list_divider">#dbdde0</color>
+    <color name="list_row_start_color">#f4f4f4</color>
+    <color name="row_list_end_color">#f4f4f4</color>
     <color name="row_list_hover_start_color">#e28256</color>
-    <color name="row_list_hover_end_color">#ffffff</color>
+    <color name="row_list_hover_end_color">#f4f4f4</color>
 </resources>
