--- a/app/src/main/res/layout/activity_college.xml
+++ b/app/src/main/res/layout/activity_college.xml
@@ -6,8 +6,11 @@
     tools:context="com.example.user.educationhunt.College" >
 
     <ListView
-        android:id="@+id/lstCollegeInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/list_college"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/list_divider"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_row_selector" />
 
 </LinearLayout>
