--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -126,11 +126,10 @@
                     android:text="http://www.lnc.edu.np"/>
 
             </LinearLayout>
-
             <com.google.android.gms.maps.MapView
                 android:id="@+id/mapview"
-                android:layout_width="match_parent"
-                android:layout_height="380dp"/>
+                android:layout_width="fill_parent"
+                android:layout_height="380dp" />
 
         </LinearLayout>
     </ScrollView>
