--- a/app/src/main/res/layout/fragment_majors.xml
+++ b/app/src/main/res/layout/fragment_majors.xml
@@ -1,19 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
+    android:orientation="vertical"
+    android:padding="10dp"
+    tools:context=".CollegeDetail"
+    >
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list_college_majors"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
     </ListView>
 
-    <TextView
-        android:id="@android:id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </TextView>
 </LinearLayout>
