--- a/app/src/main/res/layout/activity_college_registration.xml
+++ b/app/src/main/res/layout/activity_college_registration.xml
@@ -242,6 +242,7 @@
 
         <LinearLayout
             android:id="@+id/addCollegeProgram1"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -306,6 +307,7 @@
 
         <LinearLayout
             android:id="@+id/addCollegeProgram2"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
