--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -77,8 +77,7 @@
                 android:layout_marginLeft="20dp">
                 <ImageView
                     android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/type"/>
+                    android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/about_school_category"
                     android:layout_width="wrap_content"
